fix overflow

--- a/client/styles/components/gov_explainer.scss
+++ b/client/styles/components/gov_explainer.scss
@@ -30,10 +30,11 @@
 
       .stat {
         display: flex;
-        gap: 8px;
+        flex-wrap: wrap;
 
         .stat-text.Text {
           color: $neutral-500;
+          margin-right: 8px;
         }
       }
     }
